feat(buildInConcurrentHashMapUse, concurrenthashmapinterface, customconcurrenthashmapUse, CustomConcurrentMap): added computeifabsent method fix(invertedIndex): replaced putifabsent with computeifabsent in addPairToMap method, replaced .toList with .collect to solve build error fix(CustomHashMap): replaced var keyword refactor(Server): changed comment